# Clurd

./: .gitignore  Cargo.toml  README.md  Rocket.toml  build.sh  cio.json  config.toml  credentials.json  package-lock.json  package.json  pinuccio.json  piru.json  server.js  tomove.md
.github/workflows/: build.yml
client-side/desktop/: json  json.c  post  post.c  res.txt
client-side/website/: package-lock.json  package.json
client-side/website/src/lib/header/: Header.svelte
client-side/website/src/routes/: __layout.svelte  index.svelte
client-src/: README.md
client-src/desktop/: package-lock.json  package.json  preload.js
client-src/desktop/app/src/: App.svelte
client-src/desktop/src/: App.svelte
client-src/website/: package-lock.json  package.json  svelte.config.js
client-src/website/src/lib/: editor.svelte  toolbox.svelte
client-src/website/src/lib/contex/: contex.css  contex.svelte
client-src/website/src/lib/details/: details.svelte
client-src/website/src/lib/file-browser/: browser.svelte
client-src/website/src/lib/otherinfo/: disk.svelte  interface.svelte
client-src/website/src/lib/ts/: copy.ts  io.ts  menu.ts  pdf.ts
client-src/website/src/routes/: __layout.svelte  index.svelte  settings.svelte
client-src/website/static/css/: index.css  toolbox.css
client-src/website/static/images/: dumpfile (1).pcapng
server-side/: md5  md5.c  server.js
src/: Cargo.toml  ciro.txt  lib.rs  main.rs
