[package]
name = "clurd"
version = "0.1.0"
license = "ISC"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.0.3"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
json = "0.12.4"
zip = "0.6.2"
fs2 = "0.4.3"
infer = "0.3"
confy = "0.4.0"
serde = "1.0.137"
config-file = "0.2.3"
sysinfo = "0.23.12"

